// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.TimePicker Mixins default values of props UU5.Commons.Base_Elementary_Pure_Color 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker Mixins default values of props UU5.Forms.InputMixin 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker Mixins default values of props UU5.Forms.TextInputMixin 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker default props check UU5.Forms.TimePicker 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props autocompleteItems=undefined 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props className="my-classname" 1`] = `
<div
  className="uu5-forms-timepicker my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="brown"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="brown-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="cyan"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="cyan-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="default"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="green"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="green-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="grey"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="grey-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="orange"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="orange-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="pink"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="pink-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="purple"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="purple-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="red"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="red-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="yellow"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="yellow-rich"
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props controlled=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props controlled=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props default props 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props disabled=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props disabled=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  >
    <text-input
      disabled={true}
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props feedback="error" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="error"
    readonly={false}
  >
    <text-input
      feedback="error"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props feedback="initial" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props feedback="loading" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled uu5-forms-input-prevent-wrap"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="loading"
    readonly={false}
  >
    <text-input
      disabled={true}
      feedback="loading"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      loading={true}
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props feedback="success" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="success"
    readonly={false}
  >
    <text-input
      feedback="success"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props feedback="warning" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="warning"
    readonly={false}
  >
    <text-input
      feedback="warning"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props focusMessage="Bedlivě hlídám co píšete." 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props format="12" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props format="24" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props function -> InputMixin onChange() 1`] = `
<TimePicker
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TimePicker props function -> InputMixin onChange() 2`] = `
<TimePicker
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="12:00"
/>
`;

exports[`UU5.Forms.TimePicker props function -> InputMixin onChangeFeedback() 1`] = `
<TimePicker
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TimePicker props function -> InputMixin onChangeFeedback() 2`] = `
<TimePicker
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="12:00"
/>
`;

exports[`UU5.Forms.TimePicker props function -> InputMixin onValidate() 1`] = `
<TimePicker
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TimePicker props function -> InputMixin onValidate() 2`] = `
<TimePicker
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="12:00"
/>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin onBlur() 1`] = `
<TimePicker
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin onBlur() 2`] = `
<TimePicker
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="12:00"
/>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin onEnter() 1`] = `
<TimePicker
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin onEnter() 2`] = `
<TimePicker
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="12:00"
/>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin onFocus() 1`] = `
<TimePicker
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin onFocus() 2`] = `
<TimePicker
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="12:00"
/>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin validateOnChange() - input is invalid 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="uuID01"
  onClick={[Function]}
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Start of event"
    for="uuID01-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Not valid."
    readonly={false}
  >
    <text-input
      feedback="error"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID01-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID01-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props function -> Text.InputMixin validateOnChange() - input is valid 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="uuID02"
  onClick={[Function]}
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Start of event"
    for="uuID02-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="Is valid."
    readonly={false}
  >
    <text-input
      feedback="success"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID02-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID02-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      value="12:00"
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props hidden=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props hidden=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props iconClosed="uu5-minus" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="uu5-minus"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props iconOpen="mdi-calendar" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props id="myId" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="myId"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="myId-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="myId-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props inputAttrs={"type":"email","width":"150px"} 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
          "type": "email",
          "width": "150px",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props inputColWidth="xs12 s6 m8 l9" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props inputColWidth="xs12 s9" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props label="Your personal email" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Your personal email"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props labelAlignment="xs-left s-right" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props labelAlignment="xs-right s-left" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props labelColWidth="xs12 s3" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props labelColWidth="xs12 s6 m4 l3" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props mainAttrs=undefined 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props message="Your password is too short!" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    message="Your password is too short!"
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props name="myName" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  name="myName"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="myName"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props nanMessage="Prosím zadejte validní čas." 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props noIndex=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props noIndex=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-noindex uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props patternMessage="Hodnota inputu není validní." 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props placeholder="Prosím vyplňte požadované pole .." 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Prosím vyplňte požadované pole .."
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props placeholder="např.: +420 000 000 000" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="např.: +420 000 000 000"
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props readOnly=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props readOnly=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={true}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      readonly={true}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props required=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props required=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props requiredMessage="Bez tohoto pole se nehnete dál." 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props seconds=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props seconds=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-timepicker-seconds"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props selected=false 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props selected=true 1`] = `
<div
  className="uu5-forms-timepicker uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props size="l" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-l uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props size="m" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props size="s" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props value="10:30 PM" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      value="10:30"
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props value="10:30" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      value="10:30"
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props valueType="date" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props valueType="string" 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TimePicker props valueType=null 1`] = `
<div
  className="uu5-forms-timepicker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      icon="mdi-clock-outline"
      iconClickable={false}
      id="uuID-input"
      mainAttrs={
        Object {
          "autoComplete": "off",
        }
      }
      name="uuID-input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
    />
    <Popover
      disableBackdrop={true}
      forceRender={true}
      ref_={[Function]}
    />
  </InputWrapper>
</div>
`;
